# Turing-machine

./: CMakeLists.txt  Main_screen.cpp  Main_screen.h  main.cpp
